--- a/index.html
+++ b/index.html
@@ -123,7 +123,30 @@
         </div>
         <p style="margin-top: 15px;">🚀 نقل الملفات:</p>
         <div class="terminal">
+            sudo mount -o remount,rw /dev/sda1 /mnt/my_kali
             sudo cp -r /home/kali/Downloads/. /mnt/my_kali/
+
+
+        </div>
+    </div>
+
+     <div class="card" data-aos="flip-up">
+        <div class="img-box">
+            <img src="windscrib.webp" alt="Terminal Desktop">
+        </div>
+        <h2>WindScribe</h2>
+        <p> Download WindScribe :</p>
+        <div class="terminal">
+            sudo apt install ./windscribe_2.20.4_guinea_pig_amd64.deb
+        </div>
+        <p style="margin-top: 15px;">Username and PassWord</p>
+        <div class="terminal">
+            
+            User Name : DeepFigSiren
+               .       .              .
+            PassWord :Anasmohamed@123
+
+
         </div>
     </div>
 
